person_detection/build/log/idf_py_stdout_output_51947
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/stefano/esp/projects_tf/person_detection/build/bootloader/esp-idf/esptool_py && /home/stefano/esp/idf-tools/python_env/idf5.4_py3.11_env/bin/python /home/stefano/esp/idf/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/stefano/esp/projects_tf/person_detection/build/bootloader/bootloader.bin
Bootloader binary size 0x58a0 bytes. 0x2760 bytes (31%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building CXX object esp-idf/espressif__esp-tflite-micro/CMakeFiles/__idf_espressif__esp-tflite-micro.dir/tensorflow/lite/micro/kernels/esp_nn/conv.cc.obj
FAILED: esp-idf/espressif__esp-tflite-micro/CMakeFiles/__idf_espressif__esp-tflite-micro.dir/tensorflow/lite/micro/kernels/esp_nn/conv.cc.obj 
/home/stefano/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/bin/xtensa-esp32s3-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.4-dev-610-g003f3bb5dc\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/stefano/esp/projects_tf/person_detection/build/config -I/home/stefano/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro -I/home/stefano/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/third_party/gemmlowp -I/home/stefano/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/third_party/flatbuffers/include -I/home/stefano/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/third_party/ruy -I/home/stefano/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/third_party/kissfft -I/home/stefano/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/signal/micro/kernels -I/home/stefano/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/signal/src -I/home/stefano/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/signal/src/kiss_fft_wrappers -I/home/stefano/esp/idf/esp-idf/components/newlib/platform_include -I/home/stefano/esp/idf/esp-idf/components/freertos/config/include -I/home/stefano/esp/idf/esp-idf/components/freertos/config/include/freertos -I/home/stefano/esp/idf/esp-idf/components/freertos/config/xtensa/include -I/home/stefano/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/stefano/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/stefano/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/stefano/esp/idf/esp-idf/components/freertos/esp_additions/include -I/home/stefano/esp/idf/esp-idf/components/esp_hw_support/include -I/home/stefano/esp/idf/esp-idf/components/esp_hw_support/include/soc -I/home/stefano/esp/idf/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/stefano/esp/idf/esp-idf/components/esp_hw_support/dma/include -I/home/stefano/esp/idf/esp-idf/components/esp_hw_support/ldo/include -I/home/stefano/esp/idf/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/stefano/esp/idf/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/stefano/esp/idf/esp-idf/components/heap/include -I/home/stefano/esp/idf/esp-idf/components/log/include -I/home/stefano/esp/idf/esp-idf/components/soc/include -I/home/stefano/esp/idf/esp-idf/components/soc/esp32s3 -I/home/stefano/esp/idf/esp-idf/components/soc/esp32s3/include -I/home/stefano/esp/idf/esp-idf/components/hal/platform_port/include -I/home/stefano/esp/idf/esp-idf/components/hal/esp32s3/include -I/home/stefano/esp/idf/esp-idf/components/hal/include -I/home/stefano/esp/idf/esp-idf/components/esp_rom/include -I/home/stefano/esp/idf/esp-idf/components/esp_rom/include/esp32s3 -I/home/stefano/esp/idf/esp-idf/components/esp_rom/esp32s3 -I/home/stefano/esp/idf/esp-idf/components/esp_common/include -I/home/stefano/esp/idf/esp-idf/components/esp_system/include -I/home/stefano/esp/idf/esp-idf/components/esp_system/port/soc -I/home/stefano/esp/idf/esp-idf/components/esp_system/port/include/private -I/home/stefano/esp/idf/esp-idf/components/xtensa/esp32s3/include -I/home/stefano/esp/idf/esp-idf/components/xtensa/include -I/home/stefano/esp/idf/esp-idf/components/xtensa/deprecated_include -I/home/stefano/esp/idf/esp-idf/components/esp_timer/include -I/home/stefano/esp/idf/esp-idf/components/lwip/include -I/home/stefano/esp/idf/esp-idf/components/lwip/include/apps -I/home/stefano/esp/idf/esp-idf/components/lwip/include/apps/sntp -I/home/stefano/esp/idf/esp-idf/components/lwip/lwip/src/include -I/home/stefano/esp/idf/esp-idf/components/lwip/port/include -I/home/stefano/esp/idf/esp-idf/components/lwip/port/freertos/include -I/home/stefano/esp/idf/esp-idf/components/lwip/port/esp32xx/include -I/home/stefano/esp/idf/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/stefano/esp/idf/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/stefano/esp/idf/esp-idf/components/driver/deprecated -I/home/stefano/esp/idf/esp-idf/components/driver/i2c/include -I/home/stefano/esp/idf/esp-idf/components/driver/touch_sensor/include -I/home/stefano/esp/idf/esp-idf/components/driver/twai/include -I/home/stefano/esp/idf/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/stefano/esp/idf/esp-idf/components/esp_pm/include -I/home/stefano/esp/idf/esp-idf/components/esp_ringbuf/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_gpio/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_pcnt/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_gptimer/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_spi/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_mcpwm/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_ana_cmpr/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_i2s/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_sdmmc/include -I/home/stefano/esp/idf/esp-idf/components/sdmmc/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_sdspi/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_sdio/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_dac/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_rmt/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_tsens/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_sdm/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_i2c/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_uart/include -I/home/stefano/esp/idf/esp-idf/components/vfs/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_ledc/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_parlio/include -I/home/stefano/esp/idf/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/stefano/esp/projects_tf/person_detection/managed_components/espressif__esp-nn/include -I/home/stefano/esp/projects_tf/person_detection/managed_components/espressif__esp-nn/src/common -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -O2 -fmacro-prefix-map=/home/stefano/esp/projects_tf/person_detection=. -fmacro-prefix-map=/home/stefano/esp/idf/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -Wno-error=attributes -Wno-error=shadow -Wno-maybe-uninitialized -Wno-missing-field-initializers -Wno-error=sign-compare -Wno-error=double-promotion -Wno-type-limits -Wno-error=stringop-overread -DESP_NN -DTF_LITE_STATIC_MEMORY -DTF_LITE_DISABLE_X86_NEON -O3 -Wstrict-aliasing -Wvla -Wsign-compare -Wdouble-promotion -Wswitch -Wunused-function -Wmissing-field-initializers -Wshadow -Wunused-variable -fno-unwind-tables -fmessage-length=0 -Wno-nonnull -std=c++11 -fno-threadsafe-statics -Werror -Wno-return-type -Wno-strict-aliasing -std=gnu++14 -MD -MT esp-idf/espressif__esp-tflite-micro/CMakeFiles/__idf_espressif__esp-tflite-micro.dir/tensorflow/lite/micro/kernels/esp_nn/conv.cc.obj -MF esp-idf/espressif__esp-tflite-micro/CMakeFiles/__idf_espressif__esp-tflite-micro.dir/tensorflow/lite/micro/kernels/esp_nn/conv.cc.obj.d -o esp-idf/espressif__esp-tflite-micro/CMakeFiles/__idf_espressif__esp-tflite-micro.dir/tensorflow/lite/micro/kernels/esp_nn/conv.cc.obj -c /home/stefano/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/kernels/esp_nn/conv.cc
/home/stefano/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/kernels/esp_nn/conv.cc: In function 'TfLiteStatus tflite::{anonymous}::Eval(TfLiteContext*, TfLiteNode*)':
/home/stefano/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/kernels/esp_nn/conv.cc:275:32: error: expected ';' before 'const'
  275 |   printf("ESTAMOS EN ESP_NN\n")
      |                                ^
      |                                ;
......
  278 |   const TfLiteEvalTensor* input =
      |   ~~~~~                         
/home/stefano/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/kernels/esp_nn/conv.cc:296:11: error: 'input' was not declared in this scope; did you mean 'int'?
  296 |   switch (input->type) {  // Already know in/out types are same.
      |           ^~~~~
      |           int
ninja: build stopped: subcommand failed.
